# $Id$

2008-03-30
	* Added mem_res and mem_vsize to $top.

2008-03-29
	* Increased C99 compliance.
	* Fixed potential segfault in get_ioscheduler().
	* Implemented upwards path traversal for fs_type.
	* Fixed bug in libmpdclient that caused file descriptors to be left open.
	* Cleaned up output of battery_* vars.

2008-03-28
	* Fixed messed up percentages (fs_free_perc, fs_used_perc, mpd_percent,
	battery_percent).

2008-03-24
	* Fixed for specifying a non-existent configuration file.
	* Added disk_protect.
	* Fixed too many open files bug in laptop_mode.
	* Fixed reading interface adresses.
	* Fixed battery_bar default size

2008-03-23
	* Fixed compilation with --disable-x11
	* Fixed linux.c compilation problem due to (suspected) broken linux
	headers
	* $battery_bar sysfs fix (thanks Marcus)

2008-03-22
	* Conky 1.5.0 released
	* Smapi review: improved code, fixed memleaks and smapi_bat_perc when
	using pad_percents.
	* Fixed spaced_print, so pad_percents should now work as expected.
	* Removed a line of dead code.
	* Added support for displaying the default gateway.
	* Support displaying current laptop_mode.
	* Per-disk IO scheduler information now available.
	* Support printing current nameservers.

2008-03-20
	* Added CRLF characters to POP3 and IMAP stuff (should play nicer with
	some servers now).
	* Added preliminary support for parsing the output of external commands
	(via $execp and $execpi)
	* Applied FreeBSD total memory patch (thanks Nikos)

2008-03-19
	* Fixed a number of small memory leaks.
	* Performed some minor profiling on Conky; reduced text_buffer_size
	default to 128 bytes to improve performance.
	* Fixed some minor bugs introduced by new patches.

2008-03-17
	* Applied 12 patches:
		1) sysfs battery support (for Linux >=2.6.24) (thanks Kapil)
		2) Improved audacious support patch (thanks Miroslav)
		3) tp_smapi support patch for IBM laptops (thanks Phil)
		4) user info patch (thanks Roland)
		5) added conky build info patch (thanks Roland)